--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
         justify-content: center;
       }
       .answer-part {
-        width: 470px;
+        width: 475px;
         height: 60px;
         position: absolute;
         color: white;
@@ -126,6 +126,7 @@
       }
 
       .answer-title {
+        padding: 20px;
         font-family: "Sniglet-Regular", sans-serif;
       }
       #ground {
