--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         </div>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
+    <script type="module" src="utils.js"></script>
   </body>
 </html>
